--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "node_modules",
     "bower_components"
   ],
-  "dependencies": { }
+  "dependencies": {
+    "loadcss": "~0.1.6",
+    "foundation": "~5.5.2"
+  }
 }
